# aio-scrapy

./: .gitignore  LICENSE  MANIFEST.in  Pipfile  README.md  setup.cfg  tox.ini
aio_scrapy/: crawler.py  downloader.py  engine.py  exceptions.py  scheduler.py  signal_manager.py  signals.py
aio_scrapy/pipelines/: base.py
aio_scrapy/settings/: default_settings.py
aio_scrapy/utils/: test.py
src/aio_scrapy/: engine.py  middlewares.py  scheduler.py  scraper.py  spiders.py
src/aio_scrapy/pipelines/: __init__.py  file.py
src/aio_scrapy/settings/: __init__.py
src/aio_scrapy/utils/: __init__.py  log.py  test.py
tests/: conftest.py  test_crawler.py  test_engine.py  test_mocker_server.py  test_signal_manager.py  test_spiders.py
