[metadata]
name = aio_scrapy
version = attr: aio_scrapy.__version__
author = wanghuagang
author_email = huagang517@126.com
description = asyncio scrapy
long_description = file: README.md
long_description_content_type = text/markdown
keywords = '["asyncio", "scrapy"]'
classifiers =
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    pydispatcher
    aiohttp
    asyncio-periodic

[options.packages.find]
exclude =
    tests*
    docs
    examples

[flake8]
max-line-length = 120
exclude =
    build
    .tox
    .git
    examples

[isort]
not_skip = __init__.py
skip =
    .tox
    examples

[tool:pytest]
testpaths = tests
python_files = tests.py test_*.py *_tests.py
