[metadata]
name = aio_scrapy
version = attr: aio_scrapy.__version__
author = wanghuagang
author_email = huagang517@126.com
description = asyncio scrapy
long_description = file: README.md
long_description_content_type = text/markdown
keywords = '["asyncio", "scrapy"]'
classifiers =
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
python_requires > = 3.7
include_package_data = True
packages = find:
package_dir =
    = src
install_requires =
    pydispatcher
    aiohttp
    asyncio-periodic

[options.packages.find]
where = src
exclude =
    tests*
    docs
    examples

[tool:pytest]
testpaths = tests
python_files = tests.py test_*.py *_tests.py
